Datastructure performance improvements
This replaces a couple datastructures with alternatives that will use less memory and be faster.  There is probably more work to be done here, but these seem like the most obvious places for gains.